# langchain-101

./: .gitignore  main.py  pyproject.toml
advance-agent/: .env.example  SYSTEM.md  agent.py  config.py  evaluation.py  evaluation_langsmith.py  guardrails.py  main.py  schemas.py  session.py
langchain-quick-start/: basic-agent.py
langchain-quick-start/real-world-agent/: agent.py  llm.py  prompt.py  schema.py  tools.py
model-inference/: llm.py  main.py
simple-agent/: README.md  main.py  pyproject.toml
