[project]
name = "langchain-101"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.139.0",
    "langchain>=1.3.11",
    "langchain-groq>=1.1.3",
    "pydantic>=2.13.4",
    "requests>=2.34.2",
    "uvicorn>=0.50.2",
]
